Tela Meus ingressos e Splach prontas e tela Favoritos alterada

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.tickednow">
-
-    <!--permissoes-->
+    <!-- permissoes -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,6 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".Meus_Ingressos"
+            android:exported="true" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -32,8 +34,8 @@
             android:name=".MainActivity"
             android:exported="true" />
         <activity android:name=".EscolhaIngresso" />
-        <activity android:name=".Favortios" />
-        <activity android:name=".Tela_Maps">
+        <activity android:name=".Tela_Maps" />
+        <activity android:name=".Favortios">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
