--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".Favortios"
             android:exported="true" />
@@ -29,6 +30,9 @@
             android:exported="true" />
         <activity
             android:name=".Tela_Home"
+            android:exported="true" />
+        <activity
+            android:name=".Login"
             android:exported="true" />
         <activity
             android:name=".Conta"
