--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".TelaOpiniao"
+            android:exported="true" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -24,7 +27,6 @@
         <activity
             android:name=".Meus_Ingressos"
             android:exported="true" />
-
         <activity
             android:name=".InfoEvento"
             android:exported="true" />
